Alignment and colour fixes

--- a/robotmoderationcss.css
+++ b/robotmoderationcss.css
@@ -15,4 +15,11 @@ iframe{
 }
 .invitelinktext{
 	font-size: 25px;
+	text-align: center;
+	color: rgb(0,255,0);
+}
+.invitelinkheader{
+	font-size: 35px;
+	text-align: center;
+	color: rgb(255,0,0);
 }
